# agi-layer

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Doctor.bat  HANDOVER.md  MYRO.md  Myro.bat  README.md  Setup.bat  doctor.py  main.py  myro.sh  pyproject.toml  requirements.txt  setup.sh
config/: models.yaml  settings.py
core/: agent.py  backup.py  brain.py  browser_agent.py  connectors.py  context_builder.py  listen.py  log.py  notify.py  onboarding.py  orchestrator.py  policy.py  proactive.py  profile.py  router.py  routines.py  scheduler.py  session.py  starter_routines.py  telegram_bridge.py  tools.py  voice.py  voice_loop.py
docs/: PHASE1.md  PHASE10.md  PHASE11.md  PHASE12.md  PHASE13.md  PHASE14.md  PHASE15.md  PHASE16.md  PHASE17.md  PHASE18.md  PHASE19.md  PHASE2.md  PHASE20.md  PHASE21.md  PHASE22.md  PHASE23.md  PHASE24.md  PHASE25.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  REVIEW.md  SETUP.md
governance/: audit.py  guardrails.py  versioning.py
improvement/: feedback.py  finetune.py  gepa_optimizer.py  optimizer.py  skills.py
interfaces/: api.py  cli.py  mcp.py  telegram.py  voice.py  webapi.py
memory/: consolidation.py  episodic.py  extract.py  extractor.py  graph.py  ingest.py  procedural.py  retrieval.py  schema.py  scope.py  seed.py  semantic.py  semantic_native.py  store.py  write_path.py
models/: agent_sdk.py  echo.py  embeddings.py  frontier.py  local.py  multimodal.py  registry.py  reranker.py
tests/: smoke.py
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+25 files in other folders)
