[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-layer"
version = "0.9.0"
description = "A local-first personal intelligence layer: persistent memory + multi-model orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
subscription = ["claude-agent-sdk"]      # Claude on your Pro/Max plan (default backend)
frontier = ["litellm"]                   # Claude/GPT/Gemini via an API key
rerank = ["sentence-transformers"]       # cross-encoder reranker + local embeddings
mem0 = ["mem0ai", "chromadb"]            # optional hybrid semantic backend
dspy = ["dspy-ai"]                       # GEPA prompt/routing optimization
serve = ["fastapi", "uvicorn", "mcp"]    # HTTP API + MCP bridge interfaces
schedule = ["apscheduler"]               # cron-accurate consolidation scheduler
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
agi-layer = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "memory", "models", "improvement", "governance", "interfaces", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
